--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(identify_confounder)
 export(interaction_models)
 export(multi_reg)
 export(multi_reg_nbin)
+export(plot_reg)
+export(plot_reg_combine)
 export(select_models)
 export(stratified_multi_nbin)
 export(stratified_multi_reg)
