--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,3 +14,26 @@ export(stratified_uni_nbin)
 export(stratified_uni_reg)
 export(uni_reg)
 export(uni_reg_nbin)
+importFrom(dplyr,arrange)
+importFrom(dplyr,case_when)
+importFrom(dplyr,filter)
+importFrom(dplyr,if_else)
+importFrom(dplyr,mutate)
+importFrom(dplyr,row_number)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,coord_cartesian)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,geom_errorbarh)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_vline)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,margin)
+importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_x_log10)
+importFrom(ggplot2,scale_y_discrete)
+importFrom(ggplot2,theme_minimal)
+importFrom(ggtext,element_markdown)
+importFrom(magrittr,"%>%")
+importFrom(tidyr,fill)
