--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,12 @@ export(stratified_uni_nbin)
 export(stratified_uni_reg)
 export(uni_reg)
 export(uni_reg_nbin)
+importFrom(MASS,glm.nb)
+importFrom(broom,tidy)
+importFrom(broom.helpers,tidy_add_reference_rows)
+importFrom(broom.helpers,tidy_plus_plus)
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
 importFrom(dplyr,if_else)
@@ -36,4 +41,28 @@ importFrom(ggplot2,scale_y_discrete)
 importFrom(ggplot2,theme_minimal)
 importFrom(ggtext,element_markdown)
 importFrom(magrittr,"%>%")
+importFrom(patchwork,plot_layout)
+importFrom(patchwork,wrap_plots)
+importFrom(rlang,.data)
+importFrom(stats,AIC)
+importFrom(stats,BIC)
+importFrom(stats,anova)
+importFrom(stats,as.formula)
+importFrom(stats,binomial)
+importFrom(stats,coef)
+importFrom(stats,cooks.distance)
+importFrom(stats,deviance)
+importFrom(stats,glm)
+importFrom(stats,glm.control)
+importFrom(stats,lm)
+importFrom(stats,logLik)
+importFrom(stats,na.omit)
+importFrom(stats,nobs)
+importFrom(stats,poisson)
+importFrom(stats,predict)
+importFrom(stats,residuals)
+importFrom(stats,shapiro.test)
+importFrom(tibble,tibble)
 importFrom(tidyr,fill)
+importFrom(utils,data)
+importFrom(utils,globalVariables)
