--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Authors@R: c(
     )
   )
 Description: Functions to create publication-ready cohort study tables with risk ratios using gtsummary and risks packages.
-License: MIT
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 epends: 
@@ -20,19 +20,27 @@ Imports:
     gtsummary,
     risks,
     purrr,
-    broom,
-    broom.helpers,
     magrittr,
     MASS,
     rlang,
     stats,
     lmtest,
-    car,
     patchwork,
-    ggtext
+    ggtext, 
+    ggplot2,
+    tidyr,
+    utils,
+    sandwich,
+    tibble,
+    broom,
+    broom.helpers
+VignetteBuilder: knitr
 Suggests:
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    knitr,
+    rmarkdown,
+    mlbench,
+    car,
+    forcats
 RoxygenNote: 7.3.2
 Config/testthat/edition: 3
-Depends: 
-    R (>= 3.5)
