--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,14 @@
 export(check_convergence)
 export(identify_confounder)
 export(interaction_models)
+export(modify_table)
 export(multi_reg)
 export(multi_reg_nbin)
 export(plot_reg)
 export(plot_reg_combine)
+export(save_docx)
+export(save_plot)
+export(save_table)
 export(select_models)
 export(stratified_multi_nbin)
 export(stratified_multi_reg)
@@ -25,6 +29,8 @@ importFrom(dplyr,filter)
 importFrom(dplyr,if_else)
 importFrom(dplyr,mutate)
 importFrom(dplyr,row_number)
+importFrom(flextable,as_flextable)
+importFrom(flextable,body_add_flextable)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_cartesian)
 importFrom(ggplot2,element_blank)
@@ -33,6 +39,7 @@ importFrom(ggplot2,geom_errorbarh)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggsave)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,margin)
 importFrom(ggplot2,scale_x_continuous)
@@ -40,7 +47,18 @@ importFrom(ggplot2,scale_x_log10)
 importFrom(ggplot2,scale_y_discrete)
 importFrom(ggplot2,theme_minimal)
 importFrom(ggtext,element_markdown)
+importFrom(gt,gtsave)
+importFrom(gtsummary,as_flex_table)
+importFrom(gtsummary,as_gt)
+importFrom(gtsummary,bold_labels)
+importFrom(gtsummary,bold_levels)
+importFrom(gtsummary,modify_caption)
+importFrom(gtsummary,modify_header)
+importFrom(gtsummary,modify_table_body)
 importFrom(magrittr,"%>%")
+importFrom(officer,body_add_gg)
+importFrom(officer,body_add_par)
+importFrom(officer,read_docx)
 importFrom(patchwork,plot_layout)
 importFrom(patchwork,wrap_plots)
 importFrom(rlang,.data)
