--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,19 @@
 Package: gtregression
 Type: Package
 Title: Publication-Ready Cohort Study Tables
-Version: 0.1.0
+Version: 1.0.0
 Authors@R: c(
-    person(
-      "Rubeshkumar", "Polani",
-      email = "rubesh.pc@gmail.com",
-      role = c("aut", "cre")
-    )
+    person(given = "Rubeshkumar", family = "Polani", email = "rubesh.pc@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-0418-7592")),
+    person(given = "Salin K", family = "Eliyas", email = "salins13@gmail.com", role = "aut", comment = c(ORCID = "0000-0002-8020-5860")),
+    person(given = "Manikandanesan", family = "Sakthivel", email = "nesanmbbs@gmail.com", role = "aut", comment = c(ORCID = "0000-0002-5438-3970")),
+    person(given = "Yuvaraj", family = "Krishnamoorthy", email = "yuvaraj@propulevidence.org", role = "aut", comment = c(ORCID = "0000-0003-4688-510X")),
+    person(given = "Marie Gilbert", family = "Majella", email = "gilbert2691@gmail.com", role = "aut", comment = c(ORCID = "0000-0003-4036-5162"))
   )
 Description: Functions to create publication-ready cohort study tables with risk ratios using gtsummary and risks packages.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-epends: 
+Depends: 
     R (>= 4.0)
 Imports:
     dplyr,
@@ -26,7 +26,7 @@ Imports:
     stats,
     lmtest,
     patchwork,
-    ggtext, 
+    ggtext,
     ggplot2,
     tidyr,
     utils,
