--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,7 +37,6 @@ importFrom(dplyr,filter)
 importFrom(dplyr,if_else)
 importFrom(dplyr,mutate)
 importFrom(dplyr,row_number)
-importFrom(flextable,as_flextable)
 importFrom(flextable,body_add_flextable)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_cartesian)
@@ -63,12 +62,16 @@ importFrom(gtsummary,bold_levels)
 importFrom(gtsummary,modify_caption)
 importFrom(gtsummary,modify_header)
 importFrom(gtsummary,modify_table_body)
+importFrom(gtsummary,tbl_merge)
+importFrom(gtsummary,tbl_regression)
+importFrom(gtsummary,tbl_stack)
 importFrom(magrittr,"%>%")
 importFrom(officer,body_add_gg)
 importFrom(officer,body_add_par)
 importFrom(officer,read_docx)
 importFrom(patchwork,plot_layout)
 importFrom(patchwork,wrap_plots)
+importFrom(purrr,map)
 importFrom(rlang,.data)
 importFrom(stats,AIC)
 importFrom(stats,BIC)
