--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method("$",stratified_uni_nbin)
 S3method("$",stratified_uni_reg)
 S3method("$",uni_reg)
 S3method("$",uni_reg_nbin)
+export(check_collinearity)
 export(check_convergence)
 export(identify_confounder)
 export(interaction_models)
@@ -60,12 +61,14 @@ importFrom(gtsummary,as_gt)
 importFrom(gtsummary,bold_labels)
 importFrom(gtsummary,bold_levels)
 importFrom(gtsummary,modify_caption)
+importFrom(gtsummary,modify_column_hide)
 importFrom(gtsummary,modify_header)
+importFrom(gtsummary,modify_source_note)
 importFrom(gtsummary,modify_table_body)
+importFrom(gtsummary,remove_source_note)
 importFrom(gtsummary,tbl_merge)
 importFrom(gtsummary,tbl_regression)
 importFrom(gtsummary,tbl_stack)
-importFrom(magrittr,"%>%")
 importFrom(officer,body_add_gg)
 importFrom(officer,body_add_par)
 importFrom(officer,read_docx)
@@ -91,6 +94,7 @@ importFrom(stats,poisson)
 importFrom(stats,predict)
 importFrom(stats,residuals)
 importFrom(stats,shapiro.test)
+importFrom(stats,terms)
 importFrom(tibble,tibble)
 importFrom(tidyr,fill)
 importFrom(utils,data)
