--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(interaction_models)
 export(modify_table)
 export(multi_reg)
 export(multi_reg_nbin)
+export(plot_reg)
 export(plot_reg_combine)
 export(save_docx)
 export(save_plot)
@@ -30,6 +31,7 @@ importFrom(MASS,glm.nb)
 importFrom(broom,tidy)
 importFrom(broom.helpers,tidy_add_reference_rows)
 importFrom(broom.helpers,tidy_plus_plus)
+importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
