--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,5 +47,5 @@ Suggests:
     pkgdown
 RoxygenNote: 7.3.2
 Config/testthat/edition: 3
-URL: https://github.com/gtregression/gtregression
+URL: https://drrubesh.github.io/gtregression 
 BugReports: https://github.com/drrubesh/gtregression/issues
