--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,11 @@ S3method("$",uni_reg)
 S3method("$",uni_reg_nbin)
 export(check_collinearity)
 export(check_convergence)
+export(descriptive_table)
+export(dissect)
 export(identify_confounder)
 export(interaction_models)
+export(merge_tables)
 export(modify_table)
 export(multi_reg)
 export(multi_reg_nbin)
