--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,4 @@
-url: https://drrubesh.github.io/gtregression/
+url: https://gtregression.thinkdenominator.com
 template:
   bootstrap: 5
   bootswatch: flatly
