--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -62,6 +62,6 @@ Suggests:
     pkgdown
 RoxygenNote: 7.3.2
 Config/testthat/edition: 3
-URL: https://drrubesh.github.io/gtregression
-BugReports: https://github.com/drrubesh/gtregression/issues
-Branding: man/figures/gtregression_hex.png
+URL: https://ThinkDenominator.github.io/gtregression,
+  https://gtregression.thinkdenominator.com
+BugReports: https://github.com/ThinkDenominator/gtregression/issues
