--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,4 @@
-url: https://gtregression.thinkdenominator.com
+url: https://thinkdenominator.github.io/gtregression/
 template:
   bootstrap: 5
   bootswatch: flatly
