--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -1,29 +1,24 @@
 name: Run tests and upload coverage
 
 on:
-  push
-
+  push:
+    branches: [main, master]
+  pull_request:
+    branches: [main, master]
 jobs:
-  test:
-    name: Run tests and collect coverage
+  coverage:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+
+      - uses: r-lib/actions/setup-r@v2
         with:
-          fetch-depth: 2
+          use-public-rspm: true
 
-      - name: Set up Node
-        uses: actions/setup-node@v4
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run tests
-        run: npx jest --coverage
-
-      - name: Upload results to Codecov
-        uses: codecov/codecov-action@v5
+      - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          slug: ThinkDenominator/gtregression
+          extra-packages: any::covr
+
+      - name: Run coverage
+        run: covr::codecov(token = "${{ secrets.CODECOV_TOKEN }}")
+        shell: Rscript {0}
