--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -20,5 +20,5 @@ jobs:
           extra-packages: any::covr
 
       - name: Run coverage
-        run: covr::codecov(token = "${{ secrets.CODECOV_TOKEN }}")
+        run: covr::codecov()
         shell: Rscript {0}
