--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -20,5 +20,6 @@ jobs:
           extra-packages: any::covr
 
       - name: Run coverage
-        run: covr::codecov()
-        shell: Rscript {0}
+        run: Rscript -e 'covr::codecov(token = Sys.getenv("CODECOV_TOKEN"))'
+        env:
+          CODECOV_TOKEN: ${{ 3d276ca0-73c5-485b-8aa4-d6f02a5ece02 }}
