--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: gtregression
 Type: Package
 Title: Tools for Creating Publication-Ready Regression Tables
-Version: 1.0.0
+Version: 1.1.0
 Authors@R: c(
     person(given = "Rubeshkumar", family = "Polani",
     email = "rubesh@thinkdenominator.com", 
@@ -58,14 +58,21 @@ Imports:
     flextable
 VignetteBuilder: knitr
 Suggests:
-    testthat (>= 3.0.0),
+    testthat (>= 3.1.5),
     knitr,
     rmarkdown,
     mlbench,
     car,
     forcats,
-    pkgdown
-RoxygenNote: 7.3.2
+    pkgdown, 
+    shiny,
+    DT,
+    shinythemes,
+    shinyjs,
+    rio,
+    readxl
+RoxygenNote: 7.3.3
 Config/testthat/edition: 3
+Config/Needs/website: false
 URL: https://thinkdenominator.github.io/gtregression/
 BugReports: https://github.com/ThinkDenominator/gtregression/issues
