GUI exports fixed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(check_collinearity)
 export(check_convergence)
 export(descriptive_table)
 export(dissect)
+export(gtregression_app)
 export(identify_confounder)
 export(interaction_models)
 export(merge_tables)
