--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -74,3 +74,7 @@ reference:
       - data_epilepsy
       - data_infertility
       - data_lungcancer
+  - title: "Graphical User Interface"
+    desc: "Launch and use the Shiny GUI."
+    contents:
+      - gtregression_app
