--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -30,8 +30,7 @@ jobs:
         with:
           needs: website
           extra-packages: |
-            any::pkgdown
-            local::.
+            any::pkgdown, any::sessioninfo, local::.
       - name: Build site
         run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
         shell: Rscript {0}
