--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -73,6 +73,8 @@ Suggests:
     readxl
 RoxygenNote: 7.3.3
 Config/testthat/edition: 3
-Config/Needs/website: false
+Config/Needs/website: 
+    pkgdown,
+    sessioninfo
 URL: https://thinkdenominator.github.io/gtregression/
 BugReports: https://github.com/ThinkDenominator/gtregression/issues
