Updated1 test-coverage.yaml

--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -8,7 +8,7 @@ on:
 
 permissions:
   contents: read
-  id-token: write   # fine to keep
+  id-token: write
 
 jobs:
   coverage:
@@ -28,13 +28,23 @@ jobs:
 
       - name: Run tests & create coverage.xml
         run: |
-          Rscript -e 'cov <- covr::package_coverage(); covr::to_cobertura(cov, file = "coverage.xml"); cat("Wrote coverage.xml\n")'
+          Rscript -e 'cov <- covr::package_coverage(); covr::to_cobertura(cov, file = "coverage.xml")'
+
+      - name: Check token presence (no print)
+        run: |
+          if [ -z "${{ secrets.CODECOV_TOKEN }}" ]; then
+            echo "CODECOV_TOKEN is empty/unavailable to this workflow."
+            exit 1
+          else
+            echo "CODECOV_TOKEN is present."
+          fi
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}   # <-- required for protected branch
+          token: ${{ secrets.CODECOV_TOKEN }}
           files: coverage.xml
+          slug: ThinkDenominator/gtregression
           flags: unittests
           name: github-actions
           fail_ci_if_error: true
