--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -24,5 +24,9 @@ jobs:
           extra-packages: any::covr
 
       - name: Run coverage and upload to Codecov
+        # Skip on forked PRs (secrets aren't available there)
+        if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}  # <-- paste full token into this repo's secret
         run: |
-          Rscript -e 'covr::codecov(quiet = FALSE)'
+          Rscript -e 'covr::codecov(token = Sys.getenv("CODECOV_TOKEN"), quiet = FALSE)'
