--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,14 @@ S3method("$",multi_reg)
 S3method("$",stratified_multi_reg)
 S3method("$",stratified_uni_reg)
 S3method("$",uni_reg)
+S3method(print,merge_table_plot_result)
 export(check_collinearity)
 export(check_convergence)
 export(descriptive_table)
 export(dissect)
 export(identify_confounder)
 export(interaction_models)
+export(merge_table_plot)
 export(merge_tables)
 export(modify_table)
 export(multi_reg)
@@ -27,30 +29,12 @@ importFrom(broom,tidy)
 importFrom(broom.helpers,tidy_add_reference_rows)
 importFrom(broom.helpers,tidy_plus_plus)
 importFrom(dplyr,all_of)
-importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
-importFrom(dplyr,if_else)
 importFrom(dplyr,mutate)
-importFrom(dplyr,row_number)
 importFrom(flextable,body_add_flextable)
-importFrom(ggplot2,aes)
-importFrom(ggplot2,coord_cartesian)
-importFrom(ggplot2,element_blank)
-importFrom(ggplot2,element_text)
-importFrom(ggplot2,geom_errorbarh)
-importFrom(ggplot2,geom_point)
-importFrom(ggplot2,geom_vline)
-importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggsave)
-importFrom(ggplot2,labs)
-importFrom(ggplot2,margin)
-importFrom(ggplot2,scale_x_continuous)
-importFrom(ggplot2,scale_x_log10)
-importFrom(ggplot2,scale_y_discrete)
-importFrom(ggplot2,theme_minimal)
-importFrom(ggtext,element_markdown)
 importFrom(gt,gtsave)
 importFrom(gtsummary,all_categorical)
 importFrom(gtsummary,all_continuous)
@@ -69,7 +53,6 @@ importFrom(gtsummary,tbl_summary)
 importFrom(officer,body_add_gg)
 importFrom(officer,body_add_par)
 importFrom(officer,read_docx)
-importFrom(patchwork,wrap_plots)
 importFrom(purrr,map)
 importFrom(rlang,.data)
 importFrom(stats,AIC)
@@ -92,7 +75,6 @@ importFrom(stats,residuals)
 importFrom(stats,shapiro.test)
 importFrom(stats,terms)
 importFrom(tibble,tibble)
-importFrom(tidyr,fill)
 importFrom(utils,data)
 importFrom(utils,globalVariables)
 importFrom(utils,head)
