cmd check success

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,14 +4,12 @@ S3method("$",multi_reg)
 S3method("$",stratified_multi_reg)
 S3method("$",stratified_uni_reg)
 S3method("$",uni_reg)
-S3method(print,merge_table_plot_result)
 export(check_collinearity)
 export(check_convergence)
 export(descriptive_table)
 export(dissect)
 export(identify_confounder)
 export(interaction_models)
-export(merge_table_plot)
 export(merge_tables)
 export(modify_table)
 export(multi_reg)
@@ -72,6 +70,7 @@ importFrom(stats,nobs)
 importFrom(stats,poisson)
 importFrom(stats,predict)
 importFrom(stats,residuals)
+importFrom(stats,setNames)
 importFrom(stats,shapiro.test)
 importFrom(stats,terms)
 importFrom(tibble,tibble)
