--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,7 +45,6 @@ Imports:
     stats,
     lmtest,
     patchwork,
-    ggtext,
     ggplot2,
     tidyr,
     utils,
@@ -65,7 +64,8 @@ Suggests:
     car,
     forcats,
     pkgdown,
-    scales (>= 1.3.0)
+    scales (>= 1.3.0),
+    ggtext
 RoxygenNote: 7.3.3
 Config/testthat/edition: 3
 Config/Needs/website: 
